--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     class="fas fa-circle-play text-6xl md:text-7xl text-[#D4AF37] opacity-80 group-hover:opacity-100 transition-opacity mb-4"></i>
                 <span class="text-white text-lg md:text-xl uppercase tracking-[0.3em] text-center px-4">DEMO REEL · 2
                     MIN</span>
-                <span class="text-gray-400 text-sm mt-2">(vista previa)</span>
+                <span class="text-gray-400 text-sm mt-2"></span>
             </div>
             <!-- Texto tipo créditos superpuesto en la esquina inferior derecha -->
             <div class="absolute bottom-4 right-4 text-right">
